--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- #257353 No need for format description when using select widget.
 - #270267 Auto-enable the Date PHP4 module when needed.
 - #269569 Get the Date Views filter working.
 - #270626 Fix documentation errors that use create_date() instead of date_create().
