--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- Have the date_text element handle its own format description instead of doing it in the Date module.
 - #270304 Timezone was not getting saved. 
 - Empty values were getting saved.
 - #257353 No need for format description when using select widget.
