--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- The granularity options were not saved correctly by CCK when provided as checkboxes, change them back to a select widget and fix the bad values in an update.
 - Have the date_text element handle its own format description instead of doing it in the Date module.
 - #270304 Timezone was not getting saved. 
 - Empty values were getting saved.
