--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,8 @@ TODO
 
 Version 6.2-dev
 =================
+- The timezone element can sometimes be a nested value.
+- Date_fuzzy_date was not handling input from date_popup or date_text in the right way.
 - #260611 Replace substr with drupal_substr where used to get month and day abbreviations.
 - The granularity options were not saved correctly by CCK when provided as checkboxes, change them back to a select widget and fix the bad values in an update.
 - Have the date_text element handle its own format description instead of doing it in the Date module.
