--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- Clean up install file included files and include file paths, and auto-enable date_timezone and date_php4.
 - Add a is_string() test to the date_is_valid() function.
 - The timezone element can sometimes be a nested value.
 - Date_fuzzy_date was not handling input from date_popup or date_text in the right way.
