#261610 Create a way of displaying only a single date on a node to be used by the calendar js popup being developed by will_in_wi.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,7 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
-- #232959 Need to add a little extra room in the css for the collapsible fieldsets or we get scroll bars.
+- #232959 Get rid of unwanted scrollbars in date fieldsets using trick discovered by threexk.
 - Clean up install file included files and include file paths, and auto-enable date_timezone and date_php4.
 - Add a is_string() test to the date_is_valid() function.
 - The timezone element can sometimes be a nested value.
