--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,9 @@ TODO
 
 Version 6.2-dev
 =================
+- #272551 Add option to expand or collapse repeating date options.
+- #261610 Prepare for a jQuery popup in the calendar by adding a unique id to the 'node'
+   and altering the date theme to surpress all other dates if $node->date_id is set.
 - #232959 Get rid of unwanted scrollbars in date fieldsets using trick discovered by threexk.
 - Clean up install file included files and include file paths, and auto-enable date_timezone and date_php4.
 - Add a is_string() test to the date_is_valid() function.
