--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,9 @@ TODO
 
 Version 6.2-dev
 =================
+
+- Remove unneeded hook_form_alter() used to fix radio values for granularity.
+- Make sure granularity is in correct format before setting value in field settings form.
 - #244025 Didn't get the right code into the original commit for the single jquery class. 
     Still have the problem that it won't work with AHAH add more.
 - #273130 Conform to new Drupal 6 method of indicating long and short month names.
