--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ TODO
 Version 6.2-dev
 =================
 
+- The jQuery calendar requires year, month, and day or it won't work, add validation for that in the settings.
 - #270358 Fix handling of year-only or month-only text fields to save the right values.
 - Remove unneeded hook_form_alter() used to fix radio values for granularity.
 - Make sure granularity is in correct format before setting value in field settings form.
