--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ TODO
 Version 6.2-dev
 =================
 
+- #273727 Small fixes to field settings validation.
 - #248338 and #254819 clean up date_limit_format() to better handle punctuation and escaped letters.
 - The jQuery calendar requires year, month, and day or it won't work, add validation for that in the settings.
 - #270358 Fix handling of year-only or month-only text fields to save the right values.
