#270267 Remove timezone_identifiers_list() in the install file from the global space.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- #270267 Remove timezone_identifiers_list() in the install file from the global space.
 - Date Popup was not handling empty non-required values correctly and they were defaulting to current date.
 - #273727 Small fixes to field settings validation.
 - #248338 and #254819 clean up date_limit_format() to better handle punctuation and escaped letters.
