--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- Add code to adjust NOW() by a number of seconds to allow NOW() to be the beginning of the day.
 - Rework PHP4 date handling to avoid any use of date() or mktime(), which may inject an incorrect timezone offset.
 - Get rid of the adodb method of computing the gmt offset for PHP4 and use the date_offset_get() computation.
 - Fix use of wrong value for timezone in repeating dates.
