--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- #273344 Make sure incomplete Date Popup values get converted into complete dates.
 - #274882 Fix typo using $field instead of $form_values.
 - #276544 Rework system for handling timezone in date theme.
 - Add code to adjust NOW() by a number of seconds to allow NOW() to be the beginning of the day.
