#275490 Remove orphaned punctuation at beginning of string in date_limit_format().

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- #275490 Remove orphaned punctuation at beginning of string in date_limit_format().
 - #277549 Make sure no repeats are created if no start date was set.
 - #272523 Fix error in PHP4 wrapper code that kept date_modify from working reliably.
 - #273344 Make sure incomplete Date Popup values get converted into complete dates.
