--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- #269834 Add timezone adjustment to PHP4 date_format() wrapper.
 - #272110 Alter css so that from/to dates can float next to each other.
 - #275490 Remove orphaned punctuation at beginning of string in date_limit_format().
 - #277549 Make sure no repeats are created if no start date was set.
