--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- #279051 Fix postgres timezone test.
 - Add week handling and granularity tests to date_sql_handler().
 - Set date prefix on date navigation css classes.
 - Fix PHP4 handler for date_timezone_set() which was incorrectly altering the timestamp value.
