--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- #270316 Fix postgres timezone adjustment.
 - #279051 Fix postgres timezone test.
 - Add week handling and granularity tests to date_sql_handler().
 - Set date prefix on date navigation css classes.
