#280041 Fix typo in postgres switch code in date_api_sql.inc, patch by heyrocker.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ TODO
 
 Version 6.2-dev
 =================
+- #280041 Fix typo in postgres switch code in date_api_sql.inc.
 - #264749 Fix typo in date_ical_date which unset the date.
 - #277420 Add missing format information for minutes and seconds to date_sql_handler.
 - Make sure the timezone always goes on its own line now that date elements float.
