--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,8 @@ TODO
 
 Version 6.2-dev
 =================
+
+- #275797 Remove invalid and unneeded css display:relative.
 - Fix inconsistencies in handling of 'none' and 'user' timezones in Date and Calendar.
 - Add static variable to PHP4 timezone offset handling to reduce number of database queries.
 - #280041 Fix typo in postgres switch code in date_api_sql.inc.
