--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ TODO
 Version 6.2-dev
 =================
 
+- Fix computation of year range in date_content_generate.
 - #275797 Remove invalid and unneeded css display:relative.
 - Fix inconsistencies in handling of 'none' and 'user' timezones in Date and Calendar.
 - Add static variable to PHP4 timezone offset handling to reduce number of database queries.
