--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Need a space between the date and the timezone name in the Date theme.
 - Get repeating dates working.
 - #280899, #273344 Make sure Date Popup doesn't inject the current date into empty fields.
 - Fix undefined index for timezone field.
