--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Date Module 6.x
 =================
 Version 6.2-dev
 =================
+- Make sure empty time does not get value on submit.
 - Format interval theme added 'ago' twice to past events.
 - Need a space between the date and the timezone name in the Date theme.
 - Get repeating dates working.
