--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,9 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Move the class configuration to the theme so it is easier for themers.
+- Change Date filter to use a choice of date elements as selectors. This will break existing filters and no update path is provided, so edit and re-save existing filters to use the new options.
+- Remove code previously commented out that forced required value to current date, seems to be working right.
 - Adapt date elements so they will work correctly as Views 2 widgets.
 - Move #validate parameters to element processing step instead of hook_element() to help ensure they don't get wiped out.
 - Make sure partial dates, like year-only, get the right range computed for them.
