Fix computation of 'now' in PHP4 date_create() function.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Fix computation of 'now' in PHP4 date_create() function.
 - Fix some inconsistencies in the expectation of whether date_fuzzy_datetime returns a datetime or ISO value.
 - Don't use date_make_date() in date_convert() to avoid cyclical references.
 - Set a warning message for invalid non-required Date popup values instead of silently setting to NULL.
