--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Move date_format_options() to Date API so other code can use it.
 - #279247 Make sure date_timezone element works no matter what the parent element name is.
 - Fix undefined index in PHP4 date_datetime2timestamp() function.
 - #265076 Avoid use of strtotime and use date_create instead as date_text validator.
