--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #287325 Change the default date type in the date handler to DATE_DATETIME.
 - Add test for jQueryUI and load datepicker from there if it exists.
 - Update to latest versions of jQuery datepicker and timeentry.
 - Hide image div in Date Popup timeentry css to keep FF from displaying a 'helpful' dropdown.
