--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #283107 Evaluate date and time parts separately since we can't know or care how they're combined in the complete date format.
 - #283107 Date Popup timepicker formats need adjustment before using date_convert_from_custom().
 - Exception dates were getting lost when parsing the RRULE.
 - Increase size of Date Popup input box to accept longer formats that the new datepicker allows.
