--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Make sure we don't use mktime() in compare_date() function, won't work reliably in PHP4.
 - Make sure PHP4 wrapper code doesn't try to use date() on values outside the 32 bit signed range.
 - Get the url into the theme processing.
 - Remove old D5 themes, this is now handled by the Date API date browser attachment.
