--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Rework of date filter to provide a choice of a widget to use for the filter form and an option to set the default value to a set date or something like 'now +90 days'. You must delete any previously-created date filters and re-create them to pick up the new parameters.
 - Make sure PHP4 date_modify() does not care if there is a space between the number and the date part.
 - Make sure we don't use mktime() in compare_date() function, won't work reliably in PHP4.
 - Make sure PHP4 wrapper code doesn't try to use date() on values outside the 32 bit signed range.
