--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,7 +4,12 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Add 'All day' themes for use in nodes and calendar psuedo nodes.
 - #290826 Fix logic error that was missing date ranges that start before the current period by changing 'AND' to 'OR' in argument filter.
+
+Version 6.2-beta4
+=================
+
 - #270318 Get date browser and calendar navigation working correctly when used in a block.
 - Add new DATE_FORMAT_DATE for date-only format that is used throughout the calendar.
 - Fix validation code that checks if arguments and filters have date fields selected, need to array_filter() the selections.
