--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Fix broken logic in comparison of min and max to from and to dates in the date argument.
 - #272551 Remove weight for repeat element, it isn't needed and doesn't work right when weight is negative.
 - #283392 Make sure widget description shows up with or without 'to' date.
 - #292680 Make sure themes don't add padding to navigation h3 causing misalignment.
