--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #272110 Fix select lists in FF3 so they line up instead of stacking. Hopefully this will fix Safari, too.
 - #293685 Add missing $form_state in form_set_value() call in date_repeat.inc.
 - Fix broken logic in comparison of min and max to from and to dates in the date argument.
 - #272551 Remove weight for repeat element, it isn't needed and doesn't work right when weight is negative.
