--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Fix Date Popup process that was ignoring $edit values.
 - #289215 Shorten the size of Date Popup date box and allow the API to control the size.
 - #291882 Do some tweaking of the Date Popup css to be sure backgrounds are hidden and values are overridden.
 - #292945 See if there is an existing validation array before adding validation.
