--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #240156 Update Event module timezone values if the Date module is handling the timezone form.
 - #296051 Fix error in computation of last day of calendar month.
 - Clean up some invalid combinations like using 'DAILY' with an option like 'First Tuesday'.
 - #284557 Fix errors saving repeating date when no repeat options were selected.
