--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #298456 Add warnings to field settings page about changes that could result in loss of data.
 - #295095 Fix access control on repeating dates tab so it only shows on repeat nodes.
 - #295860 Fix flawed updates that were not resetting jscalendar widgets correctly.
 - #298158 Change drupal_get_path() to drupal_load() to be sure content module gets included correctly in install file.
