--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Fix weights for timezone and repeat form to always keep them below the date.
 - #290212 To date with 'same' default value wasn't picking up blank value when needed.
 - #290652 Update jQuery datepicker to development version to pick up fix for duplicated dates when dst changes.
 - #298456 Add warnings to field settings page about changes that could result in loss of data.
