--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Change error messages for ical imports to watchdog messages.
 - #294185 Add function for cross-database test of non_null values using COALESCE.
 - #300319 Move apostrophe in PostgreSQL offset code.
 - #299594 Alter date_api_sql to handle MYSQL versions prior to 4.1.1.
