--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Update to new Views2 API. Now requires latest versions of Views and CCK, and files have been re-arranged.
 - Move timezone handling logic to Date API so we can use it in Calendar, too.
 - Rework the date_id formatting to use the new #delta value being passed from CCK.
 - #196468 Add link to add a date field to a content type in Date Copy, uses new CCK feature to import from file.
