--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #306404 Make sure update 6001 returns an array.
 - Default Date Browser view should not have a content type filter in it.
 - Add some validation to date repeat logic to avoid trying to process invalid values.
 - #303999 Add function and update to clear out theme registry and all the views caches to pick up changes in Views definitions.
