--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #305376, #303999 Change method of clearing theme registry to avoid errors other themes during update.php.
 - #308353 Use long-month-name protocol for translations.
 - Eliminate query for navigation display.
 - #306404 Make sure update 6001 returns an array.
