Add in special widgets for repeating dates so normal widgets can use the regular Content module multiple values handling, requires update.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Add in special widgets for repeating dates so normal widgets can use the regular Content module multiple values handling.
 - #309196, #310728 Get rid of attempt to simplify the navigation query, it is too easily broken. 
 
 Version 6.2-rc3
