--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #308353 Long month name translations again, I applied the fix to the wrong function.
 - #313447 Throw an error on required dates that have no values filled out.
 - #312539 Improvements in translation text.
 - #296529 Remove text saying UNTIL date is not included in results, it should be.
