--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Version 6.2-dev
 =================
 
 - #312996 Break out of endless loop in date_repeat calculation.
+- #294851 Date PHP4: Make timezone_identifiers and timezone_abbreviations into statics variable to reduce execution time.
 - #294851 Date PHP4: Make timezone_map into a static variable to reduce execution time.
 - #314959 Keep repeating dates off the teaser as well as the node.
 - #312598 Date PHP4 functions can be off by 1 hour during the day dst changes, add a fix for that.
