--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Don't try to find repeating fields on types without fields.
 - #317021 Coder module patch by stella.
 - #312996 Break out of endless loop in date_repeat calculation.
 - #294851 Date PHP4: Make timezone_identifiers and timezone_abbreviations into statics variable to reduce execution time.
