--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Don't try to trim date objects in the date ical preprocessor.
 - Make a few more fixes to CCK updates in date.install.
 - Start on Advanced help for the Date module.
 - #317660 Hard code line feeds in ical export to be sure they come through correctly in all systems.
